--- a/style.css
+++ b/style.css
@@ -19,7 +19,6 @@ h1 h2 h3 h4 {
     color: black;
     cursor: pointer;
     padding: 1rem 1.5rem;
-    /* border: none; */
     align-self: center;
     text-decoration: none;
     letter-spacing: 1px;
@@ -335,13 +334,14 @@ body {
     flex-direction: column;
     gap: 1rem;
     flex: 1;
+    margin-left: 0.5rem;
 }
 .wrapper .footer .nav--footer .figures {
     display: flex;
-    justify-content: center;
+    justify-content: flex-end;
     align-items: center;
     flex-wrap: wrap;
-    flex: 2;
+    flex: 3;
 }
 .wrapper .footer .nav--footer .figures figcaption {
     display: none;
@@ -355,8 +355,8 @@ body {
     display: flex;
     flex-direction: column;
     align-items: center;
-    padding-bottom: 1rem;
-    padding-top: 1rem;
+    padding-bottom: 1.2rem;
+    padding-top: 1.2rem;
 }
 .wrapper .footer .nav figure:hover {
     cursor: pointer;
@@ -398,18 +398,12 @@ body {
         transform: translateY(-3rem);
     }
 
-    /** NAVIGATION (ger den liite större tryckyta med padding)**/
-    .wrapper .nav .nav__list .nav__item a {
-        padding: 1rem 1rem;  
-    }
-
     /** BOOKING **/
     .wrapper .booking {
         justify-content: center;
         gap: 2rem;
     }
     .wrapper .booking .form {
-        max-width: 90%;
         display: flex;
         flex-wrap: wrap;
         justify-content: center;
@@ -427,8 +421,11 @@ body {
         position: relative;
         justify-content: center;
         align-items: center;
-        padding-bottom: 16rem;
+        padding-bottom: 10rem;
         padding-top: 4rem;
+    }
+    .wrapper .main__about {
+        padding-bottom: 16rem;
     }
     .wrapper .main .button {
         position: absolute;
@@ -530,21 +527,22 @@ body {
 
 
     /** FOOTER **/
+    .wrapper .footer .nav .nav__list {
+        margin-left: 1rem;
+    }
     .wrapper .footer .nav--footer .figures--mobile figure:hover figcaption {
         display: block;
     }
-    .wrapper .footer .nav--footer .figures {
-        gap: 3rem;
-    }
+
     .wrapper .footer .nav--footer figure {
         font-size: 1.5rem;
-        
+        min-width: 75.2px;
     }
     .wrapper .footer .nav--footer .figures figure:hover {
-        transform: translateY(0.4rem);
+        transform: translateY(0.375rem);
     }
     .wrapper .footer .nav--footer .figures figcaption {
-        transform: translateY(0.4rem);
+        transform: translateY(-2.8rem);
         text-transform: uppercase;
         font-size: 0.7rem;
     }
